@@ -38,7 +38,7 @@ apply plugin: 'io.spring.dependency-management'
 
 def versions = [
   junit          : '5.8.2',
-  lombok         : '1.18.12',
+  lombok         : '1.18.22',
   gradlePitest   : '1.3.0',
   pitest         : '1.7.4',
   reformLogging  : '5.1.7',
@@ -54,7 +54,7 @@ def versions = [
   rest_assured   : '3.3.0',
   cucumber       : '5.7.0',
   feign_jackson  : '9.7.0',
-  drools         : '7.66.0.Final',
+  drools         : '7.69.0.Final',
   launchDarklySdk: '5.7.0',
   log4JVersion   : '2.17.1',
   logbackVersion : '1.2.10'
@@ -71,9 +71,14 @@ pmd {
 group = 'uk.gov.hmcts.reform.roleassignment'
 version = '0.0.1'
 
-allprojects {
-  sourceCompatibility = '11'
-  targetCompatibility = '11'
+tasks.withType(JavaExec).configureEach {
+  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
+}
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
 }
 
 jacocoTestCoverageVerification {
@@ -148,18 +153,34 @@ tasks.withType(JavaCompile) {
   options.compilerArgs << "-Xlint:unchecked" << "-Werror"
 }
 
-task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {
-  testClassesDirs = sourceSets.functionalTest.output.classesDirs
-  classpath = sourceSets.functionalTest.runtimeClasspath
-  doFirst {
+task functional(type: JavaExec) {
+  description = "Runs the functional tests"
+  group = "Verification"
+
+  generateCucumberReports.enabled = false
+  main("uk.gov.hmcts.reform.roleassignment.befta.RoleAssignmentBeftaMain")
+  classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+  args = ['--strict',  '--tags', 'not @Ignore',
+          '--plugin', "json:${rootDir}/target/cucumber.json", '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
+          '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
+         ]
+  // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
+  jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+
+  finalizedBy {
     generateCucumberReports.enabled = true
-    javaexec {
-      main = "uk.gov.hmcts.reform.roleassignment.befta.RoleAssignmentBeftaMain"
-      classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
-      args = ['--plugin', "json:${projectDir}/target/cucumber.json", '--tags', 'not @Ignore', '--glue',
-              'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features/']
+    generateCucumberReports {
+      doLast{
+        def functionalReportsFolder = "${rootDir}/target/cucumber/functional-html-reports/"
+        delete functionalReportsFolder
+        new File(functionalReportsFolder).mkdirs()
+        file("${rootDir}/target/cucumber/cucumber-html-reports").renameTo(file(functionalReportsFolder))
+        logger.quiet("Functional test report moved to ---> file://$functionalReportsFolder/overview-features.html")
+      }
     }
   }
+
+  outputs.upToDateWhen { false }
 }
 
 task integration(type: Test, description: 'Runs the integration tests.', group: 'Verification') {
@@ -216,9 +237,9 @@ runProviderPactVerification.finalizedBy pactVerify
 jacocoTestReport {
   executionData(test)
   reports {
-    xml.enabled(true)
-    csv.enabled(false)
-    xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
+    xml.required = true
+    csv.required = false
+    xml.outputLocation = file("${project.buildDir}/reports/jacoco/test/jacocoTestReport.xml")
   }
 }
 
@@ -239,11 +260,10 @@ task migratePostgresDatabase(type: FlywayMigrateTask) {
 }
 
 jacoco {
-  toolVersion = "0.8.5"
+  toolVersion = "0.8.8"
 }
 
 pitest {
-  pitestVersion = "1.5.2"
   testPlugin = "junit5"
   targetClasses = ['uk.gov.hmcts.reform.*']
   excludedClasses = ['uk.gov.hmcts.reform.roleassignment.RoleAssignmentApplication',
@@ -449,7 +469,7 @@ dependencies {
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
   testImplementation 'com.github.hmcts:fortify-client:1.2.0:all'
-  testImplementation 'com.github.hmcts:befta-fw:8.7.5'
+  testImplementation 'com.github.hmcts:befta-fw:9.0.0-CCD-3068.1'
 
   smokeTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   smokeTestImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
